--- a/Makefile.in
+++ b/Makefile.in
@@ -14,7 +14,7 @@
 
 @SET_MAKE@
 
-# File: Makefile.am, author: John Sauter, date: September 11, 2025.
+# File: Makefile.am, author: John Sauter, date: September 15, 2025.
 #
 # Build traffic_control_signals.pdf and animations.
 
@@ -528,8 +528,9 @@ EXTRA_DIST = signal_ccc.svg signal_ccu.svg signal_rrr.svg \
 	display_traffic_control_signals.py \
 	define_complex_intersection.py define_one_way_bridge.py \
 	bridge_one_car_script.txt bridge_two_cars_script.txt \
-	four_corners_many_script.txt define_four_corners.py \
-	display_intersection.py simulate_traffic.py draw_background.py \
+	four_corners_many_script.txt flood_script.txt \
+	define_four_corners.py display_intersection.py \
+	simulate_traffic.py draw_background.py \
 	traffic_control_signals.tex state_diagram.txt \
 	signal_ccc_Green.svg signal_ccc_Red.svg signal_ccc_Yellow.svg \
 	signal_ccu_Green.svg signal_ccu_Red.svg signal_ccu_Yellow.svg \
@@ -1211,7 +1212,8 @@ MUTCD_Ped_Signal_-_Walk.pdf signal_ccc.pdf signal_ccu.pdf signal_rrr.pdf \
 signal_cccl.pdf signal_llll.pdf background_01.png background_02.png \
 background_03.png \
 bridge_one_car_animation_01.mkv bridge_two_cars_animation_01.mkv \
-four_corners_many_animation_02.mkv
+four_corners_many_animation_02.mkv pedestrian_and_left_turn_animation_03.mkv \
+multiple_animation_03.mkv flood_animation_03.mkv
 	TEXINPUTS=${TEXINPUTS}:${builddir}:${srcdir} lualatex \
 --draftmode -draftmode -shell-escape ${srcdir}/traffic_control_signals.tex
 	TEXINPUTS=${TEXINPUTS}:${builddir}:${srcdir} lualatex \
@@ -1263,7 +1265,8 @@ MUTCD_Ped_Signal_-_Walk.pdf signal_ccc.pdf signal_ccu.pdf signal_rrr.pdf \
 signal_cccl.pdf signal_llll.pdf background_01.png background_02.png \
 background_03.png \
 bridge_one_car_animation_01.mkv bridge_two_cars_animation_01.mkv \
-four_corners_many_animation_02.mkv 
+four_corners_many_animation_02.mkv pedestrian_and_left_turn_animation_03.mkv \
+multiple_animation_03.mkv flood_animation_03.mkv
 	echo " " >"${builddir}/traffic_control_signals.bbl"
 	TEXINPUTS=${TEXINPUTS}:${builddir}:${srcdir} lualatex \
 --draftmode -draftmode -shell-escape "${srcdir}/traffic_control_signals.tex"
@@ -1341,13 +1344,13 @@ ${builddir}/complex_intersection.json \
 sensor_map_01.tex : display_intersection.py one_way_bridge.json
 	python3 ${srcdir}/display_intersection.py \
 ${builddir}/one_way_bridge.json  \
---table-label "sensor_map_01" \
+--table-label "sensor_map_01" --only-important \
 --sensor-map=${builddir}/sensor_map_01.tex 
 
 sensor_map_02.tex : display_intersection.py four_corners.json
 	python3 ${srcdir}/display_intersection.py \
 ${builddir}/four_corners.json  \
---table-label "sensor_map_02" \
+--table-label "sensor_map_02" --only-important \
 --sensor-map=${builddir}/sensor_map_02.tex 
 
 sensor_map_03.tex : display_intersection.py complex_intersection.json
@@ -1379,7 +1382,7 @@ ${builddir}/complex_intersection.json  \
 idle_01_table.tex : simulate_traffic.py one_way_bridge.json
 	python3 ${srcdir}/simulate_traffic.py \
 --intersection ${builddir}/one_way_bridge.json \
---table-level 4 --table-file ${builddir}/idle_01_table.tex --duration 200  \
+--table-level 5 --table-file ${builddir}/idle_01_table.tex --duration 200  \
 --table-caption "Power On to Idle State, example 01"
 
 idle_03_table.tex : simulate_traffic.py complex_intersection.json
@@ -1658,7 +1661,7 @@ MUTCD_Ped_Signal_-_Steady_hand.png MUTCD_Ped_Signal_-_Walk.png \
 car-38800411-right.png \
 car-38800411-up.png truck-51893967-up.png truck-51893967-right.png \
 man_walking_right.png
-	bash "${srcdir}/build_animation.sh" "${srcdir}/render_animation" \
+	bash "${srcdir}/build_animation.sh" "${srcdir}/render_animation.sh" \
 "${srcdir}/process_events.py" \
 "$<" "${builddir}/last_event_time_$(*F)_animation.txt" \
 "${builddir}/animation_$(*F)_temp" \
