rewrite green again

--- a/Makefile.in
+++ b/Makefile.in
@@ -14,7 +14,7 @@
 
 @SET_MAKE@
 
-# File: Makefile.am, author: John Sauter, date: October 19, 2025.
+# File: Makefile.am, author: John Sauter, date: October 26, 2025.
 #
 # Build traffic_control_signals.pdf and animations.
 
@@ -1391,13 +1391,13 @@ idle_01_table.tex : simulate_traffic.py one_way_bridge.json
 	python3 ${srcdir}/simulate_traffic.py \
 --intersection ${builddir}/one_way_bridge.json --clock-step 0.001 \
 --explain-state-transitions \
---table-level 5 --table-file ${builddir}/idle_01_table.tex --duration 200  \
+--table-level 4 --table-file ${builddir}/idle_01_table.tex --duration 200  \
 --table-caption "Power On to Idle State, example 01"
 
 idle_03_table.tex : simulate_traffic.py complex_intersection.json
 	python3 ${srcdir}/simulate_traffic.py \
 --intersection ${builddir}/complex_intersection.json --clock-step 0.001 \
---explain-state-transitions \
+--explain-state-transitions --show-substates \
 --table-level 4 --table-file ${builddir}/idle_03_table.tex --duration 200  \
 --table-caption "Power On to Idle State, example 03"
 
@@ -1459,18 +1459,18 @@ left_turn_script.txt
 --events-file "$(builddir)/left_turn_animation_03.csv" \
 --last-event-time \
 "${builddir}/last_event_time_left_turn_animation.txt" \
---duration 400 --table-start 199 --explain-state-transitions \
+--duration 400 --table-start 199 --explain-state-transitions --show-substates \
 --script "${srcdir}/left_turn_script.txt" \
 --table-caption "Left Turn"
 
 pedestrian_table.tex pedestrian_animation.csv &: simulate_traffic.py \
 complex_intersection.json pedestrian_script.txt
 	python3 ${srcdir}/simulate_traffic.py \
---intersection ${builddir}/complex_intersection.json --table-level 3 \
+--intersection ${builddir}/complex_intersection.json --table-level 4 \
 --table-file ${builddir}/pedestrian_table.tex --duration 400 \
 --events-file $(builddir)/pedestrian_animation_03.csv \
 --last-event-time "${builddir}/last_event_time_pedestrian_animation.txt" \
---clock-step 0.001 --explain-state-transitions \
+--clock-step 0.001 --explain-state-transitions --show-substates \
 --table-start 199 --script ${srcdir}/pedestrian_script.txt \
 --table-caption "Pedestrian Crosses"
 
@@ -1478,12 +1478,12 @@ pedestrian_and_left_turn_table.tex \
 pedestrian_and_left_turn_animation_03.csv &: simulate_traffic.py \
 complex_intersection.json pedestrian_and_left_turn_script.txt
 	python3 ${srcdir}/simulate_traffic.py \
---intersection ${builddir}/complex_intersection.json --table-level 3 \
+--intersection ${builddir}/complex_intersection.json --table-level 4 \
 --table-file ${builddir}/pedestrian_and_left_turn_table.tex --duration 400 \
 --events-file $(builddir)/pedestrian_and_left_turn_animation_03.csv \
 --last-event-time \
 "${builddir}/last_event_time_pedestrian_and_left_turn_animation.txt" \
---clock-step 0.001 --explain-state-transitions \
+--clock-step 0.001 --explain-state-transitions --show-substates \
 --table-start 199 --script ${srcdir}/pedestrian_and_left_turn_script.txt \
 --table-caption "Pedestrian then Left Turn"
 
@@ -1492,22 +1492,27 @@ complex_intersection.json multiple_script.txt
 	python3 ${srcdir}/simulate_traffic.py \
 --intersection ${builddir}/complex_intersection.json \
 --table-level 2 --clock-step 0.001 \
+--explain-state-transitions --show-substates \
 --events-file "$(builddir)/multiple_animation_03.csv" \
 --last-event-time "${builddir}/last_event_time_multiple_animation.txt" \
 --table-file ${builddir}/multiple_table.tex --duration 400 --table-start 199 \
 --script ${srcdir}/multiple_script.txt --table-caption "Multiple Arrivals"
 
+# In the flood script the emergency vehicle is present from 260 to 270.
+
 flood_table.tex flood_animation_03.csv &: simulate_traffic.py \
 complex_intersection.json flood_script.txt
 	python3 "${srcdir}/simulate_traffic.py" \
 --intersection "${builddir}/complex_intersection.json" \
---table-level 2 --clock-step 0.01 \
+--table-level 4 --clock-step 0.01 \
 --events-file "$(builddir)/flood_animation_03.csv" \
 --last-event-time "${builddir}/last_event_time_flood_animation.txt" \
---table-file "${builddir}/flood_table.tex" --duration 1200 --table-start 199 \
+--table-file "${builddir}/flood_table.tex" --duration 1200 \
+--table-start 258 --table-end 272 \
+--explain-state-transitions --show-substates \
 --script "${srcdir}/flood_script.txt" --table-caption "Heavy Traffic"
 
-# Some of the diagrams have been created in inkscape.  Convert them
+# Some of the pictures have been created in inkscape.  Convert them
 # to PDF files for the document or to png files for the renderer.
 
 %.pdf : %.svg ; inkscape --export-type=pdf --export-dpi=4800 \
@@ -1538,7 +1543,7 @@ left_turn_script.txt
 	python3 ${srcdir}/simulate_traffic.py \
 --intersection ${builddir}/complex_intersection.json \
 --script ${srcdir}/left_turn_script.txt --clock-step 0.001 \
---explain-state-transitions \
+--explain-state-transitions --show-substates \
 --duration 1200 --verbose 2 | tee ${builddir}/check_output.txt
 
 # Animations illustrate a scenario.  This csv file describes where each
@@ -1549,7 +1554,7 @@ left_turn_script.txt
 # and "animation_03" for the complex intersection example.
 #
 # Some of the animation CSV files are produced as a byproduct of creating
-# the events table.  The following CSV rules is for those that aren't.
+# the events table.  The following CSV rules are for those that aren't.
 %_animation_01.csv : %_script.txt simulate_traffic.py one_way_bridge.json
 	python3 ${srcdir}/simulate_traffic.py \
 --intersection ${builddir}/one_way_bridge.json --clock-step 0.001 \
